[tool.poetry]
name = "devcontainer"
version = "0.1.0"
description = ""
authors = ["Asish Binu Mathew <asishbm98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.8.0"
numpy = "^1.23.4"
pyyaml = "^6.0"
progress = "^1.6"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
